# scheduling_test

./: .env.example  .gitignore  EXPERIMENT_FLOW.md  EXPERIMENT_SUMMARY.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
batches/: eval_v2_id_map.json  rewrite_eval_queries.json
batches/state/: meta.json  openai.json  rewrite.json
data/: 1142.db  exportStudentData.json
data/dcard選課排幾txt/: 1081-1.txt  1081-2.txt  1082-1.txt  1082-2.txt  1091-1.txt  1091-2.txt  1092-2.txt  1101-1.txt  1101-2.txt  1102-1.txt  1102-2.txt  1111-1.txt  1111-2.txt  1112-1.txt  1112-2.txt  1121-1.txt  1121-2.txt  1122-1.txt  1122-2.txt  1131-1.txt  1131-2.txt  1132-1.txt  1132-2.txt  1141-1.txt  1141-2.txt  1142-1.txt  1142-2.txt
docs/: filter_experiment_charts.html  query_taxonomy_v1.md  schema.md
scripts/: analyze_e6.py  build_eval_constraint_clean.py  build_eval_synth_clean.py  build_eval_v2_batch.py  build_rewrite_batch.py  crawl_dcard_nccu.py  dense_smoke.py  diag_bm25_dense_constraint.py  eda_w1.py  ensure_tunnel.sh  eval_oracle_filter.py  eval_parser.py  eval_retrieval_filter.py  generate_eval_conditions.py  inspect_miss.py  migrate_sqlite_to_pg.py  orchestrate.py  peek_dv2_doc.py  plot_charts.py  plot_filter_results.py  plot_scores.py  plot_speed.py  prebuild_rewrite_cache.py  run_experiment.py  run_meta_batch.py  run_rewrite_batch.py  sweep_rrf_weights.py  test_constraint_expansion.py
src/db/: filter.py  pg_client.py
src/doc_builders/: __init__.py
src/eval/: __init__.py  datasets.py  metrics.py  parser_metrics.py
src/filters/: __init__.py  structured.py
src/llm/: __init__.py  eval_batch_build.py  eval_batch_merge.py  eval_batch_run.py  meta_gen.py  ollama_client.py
src/loader/: __init__.py  courses.py  time_parser.py
src/parsers/: base.py  llm_client.py  llm_fewshot.py  llm_structured.py  llm_zeroshot.py  qwen_local.py  regex_v1.py  rule_v0.py
src/query_rewriters/: __init__.py  llm.py  structured.py
src/rerankers/: __init__.py  bge.py
src/retrievers/: __init__.py  bm25.py  dense.py  fusion.py
tests/: test_eval.py  test_filters.py  test_loader.py  test_query_rewriters.py
