[project]
name = "scheduling-test"
version = "0.1.0"
description = "NCCU course retrieval experiment harness"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "ollama>=0.3",
    "jieba>=0.42",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pyarrow>=18.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
retrieval = [
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.3",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
