[project]
name = "scheduling-test"
version = "0.1.0"
description = "NCCU course retrieval experiment harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "ollama>=0.3",
    "jieba>=0.42",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pyarrow>=18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "transformers>=4.40,<5",
    "flagembedding>=1.4.0",
    "playwright>=1.59.0",
]

[project.optional-dependencies]
retrieval = [
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.3",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# torch: Linux (WSL2/server) 走 pytorch.org cu126 index，避免 PyPI NCCL 版本混裝
# cu130 在 WSL2 下 cuDriverGetVersion() 回傳 12090 (CUDA 12.9) 會被誤判版本不足
# cu126 wheel 要求 driver >= 525，driver 576.52 (CUDA 12.9) 完全符合
# macOS 不指定 → 走 PyPI 拿 MPS/CPU wheel（arm64 正常）
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
